--- a/style/home_style.css
+++ b/style/home_style.css
@@ -1,8 +1,15 @@
 body{
-	background-image: url('./pictures/contrail.png');
-    background-position: center;
-    background-size: cover;
+	background-color: white;
 
 }
 
+
+.parallax {
+    background-image: url('../pictures/contrail.png');
+    height: 100%;
+    background-attachment: fixed;
+    background-position: center;
+    background-repeat: no-repeat;
+    background-size: cover;
+}
 
