--- a/style/home_style.css
+++ b/style/home_style.css
@@ -1,15 +1,75 @@
-body{
+body {
 	background-color: white;
-
+	margin: 0;
+    padding: 0;
 }
 
-
-.parallax {
-    background-image: url('../pictures/contrail.png');
+#parallax {
+	background-image: url('../pictures/contrailhq.png');
     height: 100%;
     background-attachment: fixed;
-    background-position: center;
+    background-position: center center;
     background-repeat: no-repeat;
     background-size: cover;
+    opacity: 0.8;
 }
 
+
+.header {
+	position: absolute;
+    top: 0;
+    bottom: 0;
+    left: 0;
+    right: 0;
+    width: 50%;
+    height: 30%;
+    margin: auto;
+    text-align: center;
+}
+
+.hr{
+	background-color: white;
+	opacity:0.6;
+  	position: absolute;
+    top: 0;
+    bottom: 0;
+    left: 0;
+	right:0;
+    width: 50%;
+    height: 30%;
+    margin: auto;
+    text-align: center;
+    border-style: inset;
+    border-radius: 15px;
+}
+
+#name {
+	font-family: 'Comfortaa', cursive;
+	/*font-family: 'Raleway', sans-serif;*/
+	color: #1B9CFC;
+	font-size: 70px;
+	line-height:12vh;
+}
+#description {
+	color: #1B9CFC;
+	font-size: 30px;
+	font-weight: normal;
+	font-family: 'Comfortaa', cursive;
+	line-height: 23vh;
+}
+
+
+.about {
+	text-align: center;
+	font-family: 'Comfortaa', cursive;
+	font-size: 40px;
+}
+
+#text {
+	text-align: center;
+	margin-right: 240px;
+	margin-left: 240px;
+	left: 0;
+	font-family: 'Raleway', sans-serif;
+	font-size: 25px;
+}
