--- a/style/home_style.css
+++ b/style/home_style.css
@@ -27,28 +27,44 @@ body {
     text-align: center;
 }
 
-.hr{
-	background-color: white;
-	opacity:0.6;
-  	position: absolute;
-    top: 0;
-    bottom: 0;
-    left: 0;
-	right:0;
-    width: 50%;
-    height: 30%;
-    margin: auto;
-    text-align: center;
-    border-style: inset;
-    border-radius: 15px;
+
+
+.link {
+	margin-top:-1vh;
 }
 
+#links {
+
+	text-align: center;
+	margin: auto;
+	height: 10vh;
+	width: 60vh;
+	margin-top: -15vh;
+
+}
+
+.icon {
+	position:relative;
+	margin-top: -1vh;
+	right: 0;
+	left: 0;
+
+}
+
+#logopic {
+	margin-left:15px;
+   	margin-right:15px
+}
+
+
 #name {
+	position:relative;
 	font-family: 'Comfortaa', cursive;
 	/*font-family: 'Raleway', sans-serif;*/
 	color: #1B9CFC;
 	font-size: 70px;
 	line-height:12vh;
+	padding-top:35vh;
 }
 #description {
 	color: #1B9CFC;
