--- a/style/home_style.css
+++ b/style/home_style.css
@@ -41,6 +41,7 @@ body {
 	width: 60vh;
 	margin-top: -15vh;
 
+
 }
 
 .icon {
@@ -65,6 +66,7 @@ body {
 	font-size: 70px;
 	line-height:12vh;
 	padding-top:35vh;
+	min-width: 700px;
 }
 #description {
 	color: #1B9CFC;
@@ -72,6 +74,8 @@ body {
 	font-weight: normal;
 	font-family: 'Comfortaa', cursive;
 	line-height: 23vh;
+	min-width: 700px;
+
 }
 
 
@@ -88,4 +92,38 @@ body {
 	left: 0;
 	font-family: 'Raleway', sans-serif;
 	font-size: 25px;
+}
+
+.tooltip {
+    display: inline-block;
+    position: relative;
+}
+.tooltip:after {
+    content: attr(title);
+
+    opacity: 0;
+    width: 120px;
+
+    color: black;
+    text-align: center;
+    border-radius: 6px;
+    padding: 5px 0;
+    font-family: 'Comfortaa', cursive;
+    
+
+    position: absolute;
+    z-index: 1;
+    top: 100%;
+    left: 50%;
+    margin-left: -60px;
+    -webkit-transition: opacity 0.75s ease-in-out;
+    transition: opacity 0.75s ease-in-out;
+
+
+
+
+
+}
+.tooltip:hover:after {
+    opacity: 1;
 }
