--- a/style/home_style.css
+++ b/style/home_style.css
@@ -251,7 +251,7 @@ body {
 	list-style-type: none;
 	margin: 0;
 	padding: 0;
-	position: absolute;
+	position: relative;
 	top: 0;
 	width: 100%;  
 
