removed works and fixed sidebar

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -14,7 +14,7 @@ body {
 }
 
 a {
-  color: #149ddd;
+  color: #77a16b;
 }
 
 a:hover {
@@ -37,7 +37,7 @@ h1, h2, h3, h4, h5, h6 {
   border-radius: 50px;
   right: 15px;
   bottom: 15px;
-  background: #149ddd;
+  background: #77a16b;
   color: #fff;
   transition: display 0.5s ease-in-out;
   z-index: 99999;
@@ -69,7 +69,7 @@ h1, h2, h3, h4, h5, h6 {
   z-index: 9997;
   transition: all 0.5s;
   padding: 0 15px;
-  background: #040b14;
+  background: #4a6741;
   overflow-y: auto;
 }
 
@@ -111,7 +111,7 @@ h1, h2, h3, h4, h5, h6 {
 }
 
 #header .profile .social-links a:hover {
-  background: #149ddd;
+  background: #77a16b;
   color: #fff;
   text-decoration: none;
 }
@@ -170,7 +170,7 @@ h1, h2, h3, h4, h5, h6 {
 }
 
 .nav-menu a:hover i, .nav-menu .active > a i, .nav-menu li:hover > a i {
-  color: #149ddd;
+  color: #77a16b;
 }
 
 /* Mobile Navigation */
@@ -190,7 +190,7 @@ h1, h2, h3, h4, h5, h6 {
 }
 
 .mobile-nav-toggle i {
-  color: #149ddd;
+  color: #77a16b;
 }
 
 .mobile-nav-active {
@@ -251,7 +251,7 @@ h1, h2, h3, h4, h5, h6 {
   color: #fff;
   padding-bottom: 4px;
   letter-spacing: 1px;
-  border-bottom: 3px solid #149ddd;
+  border-bottom: 3px solid #77a16b;
 }
 
 @media (min-width: 1024px) {
@@ -303,7 +303,7 @@ section {
   display: block;
   width: 50px;
   height: 3px;
-  background: #149ddd;
+  background: #77a16b;
   bottom: 0;
   left: 0;
 }
@@ -333,7 +333,7 @@ section {
 .about .content ul i {
   font-size: 20px;
   padding-right: 2px;
-  color: #149ddd;
+  color: #77a16b;
 }
 
 .about .content p:last-child {
@@ -355,7 +355,7 @@ section {
 .facts .count-box i {
   display: block;
   font-size: 44px;
-  color: #149ddd;
+  color: #77a16b;
   float: left;
 }
 
@@ -422,7 +422,7 @@ section {
   width: 1px;
   height: 10px;
   transition: .9s;
-  background-color: #149ddd;
+  background-color: #77a16b;
 }
 
 /*--------------------------------------------------------------
@@ -517,7 +517,7 @@ section {
 }
 
 .portfolio #portfolio-flters li:hover, .portfolio #portfolio-flters li.filter-active {
-  color: #149ddd;
+  color: #77a16b;
 }
 
 .portfolio #portfolio-flters li:last-child {
@@ -603,10 +603,10 @@ section {
   justify-content: center;
   width: 54px;
   height: 54px;
-  background: #149ddd;
+  background: #77a16b;
   border-radius: 50%;
   transition: 0.5s;
-  border: 1px solid #149ddd;
+  border: 1px solid #77a16b;
 }
 
 .services .icon i {
@@ -619,7 +619,7 @@ section {
 }
 
 .services .icon-box:hover .icon i {
-  color: #149ddd;
+  color: #77a16b;
 }
 
 .services .title {
@@ -634,7 +634,7 @@ section {
 }
 
 .services .title a:hover {
-  color: #149ddd;
+  color: #77a16b;
 }
 
 .services .description {
@@ -727,7 +727,7 @@ section {
 }
 
 .testimonials .owl-dot.active {
-  background-color: #149ddd !important;
+  background-color: #77a16b !important;
 }
 
 @media (max-width: 767px) {
@@ -752,7 +752,7 @@ section {
 
 .contact .info i {
   font-size: 20px;
-  color: #149ddd;
+  color: #77a16b;
   float: left;
   width: 44px;
   height: 44px;
@@ -803,12 +803,12 @@ section {
 }
 
 .contact .info .social-links a:hover {
-  background: #149ddd;
+  background: #77a16b;
   color: #fff;
 }
 
 .contact .info .email:hover i, .contact .info .address:hover i, .contact .info .phone:hover i {
-  background: #149ddd;
+  background: #77a16b;
   color: #fff;
 }
 
@@ -884,7 +884,7 @@ section {
 }
 
 .contact .php-email-form button[type="submit"] {
-  background: #149ddd;
+  background: #77a16b;
   border: 0;
   padding: 10px 24px;
   color: #fff;
@@ -989,7 +989,7 @@ section {
 }
 
 .portfolio-details .portfolio-details-carousel .owl-dot.active {
-  background-color: #149ddd !important;
+  background-color: #77a16b !important;
 }
 
 .portfolio-details .portfolio-info {
